refactor(rent-service): changed reduce operation